--- a/src/app/modulos/principal/componentes/escritorio/escritorio.component.html
+++ b/src/app/modulos/principal/componentes/escritorio/escritorio.component.html
@@ -55,8 +55,11 @@
               <a routerLink="archivos/lotes">Lotes de archivos</a>
             </li>
             <li routerLinkActive="active">
-                <a routerLink="archivos/etiquetas">Etiquetas</a>
-              </li>
+              <a routerLink="archivos/etiquetas">Etiquetas</a>
+            </li>
+            <li routerLinkActive="active">
+              <a routerLink="archivos/resumen">Resumen</a>
+            </li>
           </ul>
         </li>
         <li routerLinkActive="active">
@@ -73,8 +76,8 @@
               <a routerLink="sedes">Sedes</a>
             </li>
             <li routerLinkActive="active">
-                <a routerLink="grupos">Grupos</a>
-              </li>
+              <a routerLink="grupos">Grupos</a>
+            </li>
             <li routerLinkActive="active">
               <a routerLink="usuarios">Usuarios</a>
             </li>
