--- a/src/app/modulos/archivo/componentes/resumen/resumen.component.html
+++ b/src/app/modulos/archivo/componentes/resumen/resumen.component.html
@@ -8,19 +8,20 @@
       <div class="ibox-content">
         <div class="row">
           <div class="col-md-6">
-            <h1 class="no-margins">20</h1>
+            <h1 class="no-margins">{{etiquetas_generadas}}</h1>
             <div class="font-bold text-navy">Generadas
               <i class="fa fa-level-up"></i>
               <!-- <small>Rapid pace</small> -->
             </div>
           </div>
           <div class="col-md-6">
-            <h1 class="no-margins">0</h1>
+            <h1 class="no-margins">{{etiquetas_utilizadas}}</h1>
             <div class="font-bold text-success">Utilizadas
               <i class="fa fa-level-down"></i>
               <!-- <small>Slow pace</small> -->
             </div>
           </div>
+
         </div>
 
 
@@ -34,11 +35,11 @@
         <h5>Archivos</h5>
       </div>
       <div class="ibox-content">
-        <h1 class="no-margins">386,200</h1>
-        <div class="stat-percent font-bold text-success">98%
+        <h1 class="no-margins">{{archivos_subidos}}</h1>
+        <!-- <div class="stat-percent font-bold text-success">98%
           <i class="fa fa-bolt"></i>
         </div>
-        <small>Total views</small>
+        <small>Total views</small> -->
       </div>
     </div>
   </div>
@@ -49,11 +50,11 @@
         <h5>Archivos</h5>
       </div>
       <div class="ibox-content">
-        <h1 class="no-margins">386,200</h1>
-        <div class="stat-percent font-bold text-success">98%
+        <h1 class="no-margins">{{archivos_por_etiquetar}}</h1>
+        <!-- <div class="stat-percent font-bold text-success">98%
           <i class="fa fa-bolt"></i>
         </div>
-        <small>Total views</small>
+        <small>Total views</small> -->
       </div>
     </div>
   </div>
@@ -64,17 +65,17 @@
         <h5>Archivos</h5>
       </div>
       <div class="ibox-content">
-        <h1 class="no-margins">386,200</h1>
-        <div class="stat-percent font-bold text-success">98%
+        <h1 class="no-margins">{{archivos_subidos - archivos_por_etiquetar}}</h1>
+        <!-- <div class="stat-percent font-bold text-success">98%
           <i class="fa fa-bolt"></i>
         </div>
-        <small>Total views</small>
+        <small>Total views</small> -->
       </div>
     </div>
   </div>
 </div>
 
-<div class="row">
+<div class="row hide">
 
   <div class="col-lg-12">
     <div class="ibox float-e-margins">
