--- a/src/app/modulos/seguridad/componentes/ingresar/ingresar.component.html
+++ b/src/app/modulos/seguridad/componentes/ingresar/ingresar.component.html
@@ -2,7 +2,8 @@
   <div class="row">
 
     <div class="col-md-6">
-      <h2 class="font-bold">Bienvenido a {{environment.appname}}</h2>
+      <img src="assets/img/Documanager.png" alt="Documanager" width="200">
+      <!-- <h2 class="font-bold">Bienvenido a {{environment.appname}}</h2> -->
 
       <p>
         {{msjBienvenida}}
