CRUD de Series Completo

--- a/src/app/modulos/principal/componentes/escritorio/escritorio.component.html
+++ b/src/app/modulos/principal/componentes/escritorio/escritorio.component.html
@@ -70,13 +70,16 @@
           </a>
           <ul class="nav nav-second-level collapse" routerLinkActive="in">
             <li routerLinkActive="active">
-              <a routerLink="terceros">Terceros</a>
+              <a routerLink="terceros">Entidades Productoras</a>
             </li>
             <li routerLinkActive="active">
-              <a routerLink="sedes">Sedes</a>
+              <a routerLink="sedes">Oficinas Productoras</a>
             </li>
             <li routerLinkActive="active">
-              <a routerLink="grupos">Grupos</a>
+              <a routerLink="series">Series</a>
+            </li>
+            <li routerLinkActive="active">
+              <a routerLink="grupos">Grupos de Usuarios</a>
             </li>
             <li routerLinkActive="active">
               <a routerLink="usuarios">Usuarios</a>
