--- a/src/app/modulos/generico/componentes/sedes/sedes.component.html
+++ b/src/app/modulos/generico/componentes/sedes/sedes.component.html
@@ -3,7 +3,7 @@
   <div class="col-lg-12">
     <div class="ibox float-e-margins">
       <div class="ibox-title">
-        <h5>Sedes, Departamentos, Secciones y otros</h5>
+        <h5>Oficinas productoras</h5>
         <div class="ibox-tools">
           <a class="collapse-link">
             <i class="fa fa-chevron-up"></i>
@@ -27,8 +27,8 @@
       <div class="ibox-content">
         <div role="form" class="form-inline">
           <div class="form-group">
-            <label for="tercero" class="sr-only">Tercero</label>
-            <select name="tercero" id="tercero" [(ngModel)]="tercero" class="form-control input-sm" title="Tercero" placeholder="Tercero"
+            <label for="tercero" class="sr-only">Entidad</label>
+            <select name="tercero" id="tercero" [(ngModel)]="tercero" class="form-control input-sm" title="Entidad Productora" placeholder="Entidad"
               [disabled]="editar">
               <option [ngValue]="terceroVacio" selected="selected">Seleccione un tercero</option>
               <option [ngValue]="t" *ngFor="let t of terceros">{{t.razon_social}}</option>
@@ -89,8 +89,8 @@
             <thead>
               <tr>
                 <th class="hide">Tipo Identificación</th>
-                <th class="hide">Identificación Tercero</th>
-                <th>Tercero</th>
+                <th class="hide">Identificación Entidad</th>
+                <th>Entidad</th>
                 <th>Identificación</th>
                 <th>Razón Social</th>
                 <th>Activa</th>
