--- a/src/app/modulos/generico/componentes/series/series.component.html
+++ b/src/app/modulos/generico/componentes/series/series.component.html
@@ -3,7 +3,7 @@
   <div class="col-lg-12">
     <div class="ibox float-e-margins">
       <div class="ibox-title">
-        <h5>Usuarios del sistema</h5>
+        <h5>Series</h5>
         <div class="ibox-tools">
           <a class="collapse-link">
             <i class="fa fa-chevron-up"></i>
@@ -27,33 +27,23 @@
       <div class="ibox-content">
         <div role="form" class="form-inline">
           <div class="form-group">
-            <label for="grupo" class="sr-only">Grupo</label>
-            <select name="grupo" id="grupo" [(ngModel)]="grupo" class="form-control input-sm" title="Grupo" placeholder="Grupo" [disabled]="editar">
-              <option [ngValue]="grupoVacio" selected="selected">Seleccione un grupo</option>
-              <option [ngValue]="g" *ngFor="let g of grupos">{{g.denominacion}}</option>
+            <label for="sede" class="sr-only">Oficina Productora</label>
+            <select name="sede" id="sede" [(ngModel)]="sede" class="form-control input-sm" title="Oficina Productora" placeholder="Oficina" [disabled]="editar">
+              <option [ngValue]="sedeVacia" selected="selected">Seleccione una Oficina Productora</option>
+              <option [ngValue]="s" *ngFor="let s of sedes">{{s.razon_social | capitalizar}} - {{s.tercero | capitalizar}}</option>
             </select>
           </div>
           <div class="form-group">
-            <label for="usuario_id" class="sr-only">Usuario</label>
-            <input type="text" placeholder="Usuario" id="usuario_id" name="usuario_id" title="Usuario" class="form-control input-sm"
-              [(ngModel)]="usuario.usuario_id" [disabled]="editar">
+            <label for="serie_id" class="sr-only">Identificador</label>
+            <input type="text" placeholder="Identificador" id="serie_id" name="serie_id" title="Identificador" class="form-control input-sm"
+              [(ngModel)]="serie.serie_id" [disabled]="editar">
           </div>
           <div class="form-group">
-            <label for="nombres" class="sr-only">Nombres</label>
-            <input type="text" placeholder="Nombres" id="nombres" name="nombres" title="Nombres" class="form-control input-sm" [(ngModel)]="usuario.nombres">
+            <label for="denominacion" class="sr-only">Denominación</label>
+            <input type="text" placeholder="Denominación" id="denominacion" name="denominacion" title="Denominación" class="form-control input-sm"
+              [(ngModel)]="serie.denominacion">
           </div>
 
-          <div class="form-group">
-            <label for="email" class="sr-only">Email</label>
-            <input type="email" placeholder="Email" id="email" name="email" title="Email" class="form-control input-sm" [(ngModel)]="usuario.email">
-          </div>
-
-          <div class="checkbox m-r-xs">
-            <input type="checkbox" id="activo" name="activo" [(ngModel)]="usuario.activo" title="Estado del usuario">
-            <label for="activo">
-              Activo
-            </label>
-          </div>
 
           <button class="btn btn-primary " type="button" (click)="guardar()">
             <i class="fa fa-check"></i>&nbsp;Guardar
@@ -93,26 +83,24 @@
               <tr>
                 <th class="">Tipo Identificación</th>
                 <th class="">Identificación</th>
+                <th class="">Sede Id</th>
+                <th>Identificador</th>
+                <th>Denominación</th>
                 <th>Sede</th>
-                <th>Grupo</th>
-                <th>Usuario</th>
-                <th>Nombres</th>
-                <th>Email</th>
-                <th>Activo</th>
+                <th>tercero</th>
                 <th>Fecha Registro</th>
               </tr>
             </thead>
             <tbody>
-              <tr *ngFor="let u of usuarios" style="cursor: pointer;">
-                <td class="">{{u.tipo_id}}</td>
-                <td class="">{{u.identificacion}}</td>
-                <td>{{u.sede}}</td>
-                <td>{{u.grupo_id}}</td>
-                <td>{{u.usuario_id}}</td>
-                <td>{{u.nombres}}</td>
-                <td>{{u.email}}</td>
-                <td>{{(u.activo===1)?'SI':'NO'}}</td>
-                <td>{{u.fecha_registro.date|date:'yyyy-MM-dd'}}</td>
+              <tr *ngFor="let s of series" style="cursor: pointer;">
+                <td class="">{{s.tipo_id}}</td>
+                <td class="">{{s.identificacion}}</td>
+                <td class="">{{s.sede_id}}</td>
+                <td>{{s.serie_id}}</td>
+                <td>{{s.denominacion}}</td>
+                <td>{{s.sede}}</td>
+                <td>{{s.tercero}}</td>
+                <td>{{s.fecha_registro.date|date:'yyyy-MM-dd'}}</td>
               </tr>
             </tbody>
           </table>
