--- a/src/app/modulos/generico/componentes/terceros/terceros.component.html
+++ b/src/app/modulos/generico/componentes/terceros/terceros.component.html
@@ -3,7 +3,7 @@
   <div class="col-lg-12">
     <div class="ibox float-e-margins">
       <div class="ibox-title">
-        <h5>Personas, Empresas y otros</h5>
+        <h5>Entidades productoras</h5>
         <div class="ibox-tools">
           <a class="collapse-link">
             <i class="fa fa-chevron-up"></i>
