--- a/src/app/modulos/principal/componentes/escritorio/escritorio.component.html
+++ b/src/app/modulos/principal/componentes/escritorio/escritorio.component.html
@@ -79,6 +79,9 @@
               <a routerLink="series">Series</a>
             </li>
             <li routerLinkActive="active">
+                <a routerLink="subseries">Subseries</a>
+              </li>
+            <li routerLinkActive="active">
               <a routerLink="grupos">Grupos de Usuarios</a>
             </li>
             <li routerLinkActive="active">
