CRUD de Convenciones completo

--- a/src/app/modulos/principal/componentes/escritorio/escritorio.component.html
+++ b/src/app/modulos/principal/componentes/escritorio/escritorio.component.html
@@ -79,8 +79,11 @@
               <a routerLink="series">Series</a>
             </li>
             <li routerLinkActive="active">
-                <a routerLink="subseries">Subseries</a>
-              </li>
+              <a routerLink="subseries">Subseries</a>
+            </li>
+            <li routerLinkActive="active">
+              <a routerLink="convenciones">Convenciones</a>
+            </li>
             <li routerLinkActive="active">
               <a routerLink="grupos">Grupos de Usuarios</a>
             </li>
