CRUD de Tipos de Documentos

--- a/src/app/modulos/principal/componentes/escritorio/escritorio.component.html
+++ b/src/app/modulos/principal/componentes/escritorio/escritorio.component.html
@@ -85,6 +85,9 @@
               <a routerLink="convenciones">Convenciones</a>
             </li>
             <li routerLinkActive="active">
+              <a routerLink="tipos">Tipos Documental</a>
+            </li>
+            <li routerLinkActive="active">
               <a routerLink="grupos">Grupos de Usuarios</a>
             </li>
             <li routerLinkActive="active">
