--- a/src/app/modulos/archivo/componentes/resumen/resumen.component.html
+++ b/src/app/modulos/archivo/componentes/resumen/resumen.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row animated fadeInRightBig">
   <div class="col-lg-4">
     <div class="ibox float-e-margins">
       <div class="ibox-title">
