--- a/src/app/modulos/generico/componentes/subseries/subseries.component.html
+++ b/src/app/modulos/generico/componentes/subseries/subseries.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row animated fadeInRightBig">
     <!-- Formulario -->
     <div class="col-lg-12">
       <div class="ibox float-e-margins">
@@ -29,8 +29,12 @@
             <div class="form-group">
               <label for="serie" class="sr-only">Serie</label>
               <select name="serie" id="serie" [(ngModel)]="serie" class="form-control input-sm" title="Serie" placeholder="Serie" [disabled]="editar">
+                  <option [ngValue]="serieVacia" selected="selected"></option>
+                  <option [ngValue]="s" *ngFor="let s of series">{{s.serie_id}} </option>
+                </select>
+              <select name="serie" id="serie" [(ngModel)]="serie" class="form-control input-sm" title="Serie" placeholder="Serie" [disabled]="editar">
                 <option [ngValue]="serieVacia" selected="selected">Seleccione una Serie</option>
-                <option [ngValue]="s" *ngFor="let s of series">{{s.denominacion | capitalizar}} - {{s.sede | capitalizar}} ({{s.tercero}})</option>
+                <option [ngValue]="s" *ngFor="let s of series">{{s.denominacion | capitalizar}} - {{s.sede | capitalizar}} ({{s.tercero|capitalizar}})</option>
               </select>
             </div>
             <div class="form-group">
@@ -99,13 +103,13 @@
                   <td class="hide">{{s.tipo_id}}</td>
                   <td class="hide">{{s.identificacion}}</td>
                   <td class="hide">{{s.sede_id}}</td>
-                  <td>{{s.serie_id}}</td>
-                  <td>{{s.serie}}</td>
-                  <td>{{s.subserie_id}}</td>
-                  <td>{{s.denominacion}}</td>
-                  <td>{{s.sede}}</td>
-                  <td>{{s.tercero}}</td>
-                  <td>{{s.fecha_registro.date|date:'yyyy-MM-dd'}}</td>
+                  <td class="medio centrado">{{s.serie_id}}</td>
+                  <td>{{s.serie|capitalizar}}</td>
+                  <td class="medio centrado">{{s.subserie_id}}</td>
+                  <td>{{s.denominacion|capitalizar}}</td>
+                  <td>{{s.sede|capitalizar}}</td>
+                  <td>{{s.tercero|capitalizar}}</td>
+                  <td class="medio centrado">{{s.fecha_registro.date|date:'yyyy-MM-dd'}}</td>
                   <td class="hide">{{s.consecutivo}}</td>
                 </tr>
               </tbody>
