--- a/src/app/modulos/generico/componentes/terceros/terceros.component.html
+++ b/src/app/modulos/generico/componentes/terceros/terceros.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row animated fadeInRightBig">
   <!-- Formulario -->
   <div class="col-lg-12">
     <div class="ibox float-e-margins">
