--- a/src/app/modulos/generico/componentes/tipos/tipos.component.html
+++ b/src/app/modulos/generico/componentes/tipos/tipos.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row animated fadeInRightBig">
   <!-- Formulario -->
   <div class="col-lg-12">
     <div class="ibox float-e-margins">
@@ -60,7 +60,7 @@
             <select name="sede" id="sede" [(ngModel)]="sede" class="form-control input-sm" title="Oficina Productora" placeholder="Oficina Productora"
                (change)="refrescar_series()">
               <option [ngValue]="sedeVacia" selected="selected">Seleccione una Oficina</option>
-              <option [ngValue]="s" *ngFor="let s of sedes">{{s.razon_social | capitalizar}}</option>
+              <option [ngValue]="s" *ngFor="let s of sedes">{{s.sede_id}} {{s.razon_social | capitalizar}}</option>
             </select>
           </div>
           <div class="form-group" [ngClass]="{'hide': sede.sede_id==='' || editar}">
@@ -68,7 +68,7 @@
             <select name="serie" id="serie" [(ngModel)]="serie" class="form-control input-sm" title="Serie" placeholder="Serie"
               (change)="refrescar_subseries()">
               <option [ngValue]="serieVacia" selected="selected">Seleccione una Serie</option>
-              <option [ngValue]="s" *ngFor="let s of series">{{s.denominacion | capitalizar}}</option>
+              <option [ngValue]="s" *ngFor="let s of series">{{s.serie_id}} {{s.denominacion | capitalizar}}</option>
             </select>
           </div>
           <div class="form-group" [ngClass]="{'hide': serie.serie_id==='' || editar}">
@@ -76,7 +76,7 @@
             <select name="subserie" id="subserie" [(ngModel)]="subserie" class="form-control input-sm" title="Subserie" placeholder="Subserie"
               >
               <option [ngValue]="serieVacia" selected="selected">Seleccione una Subserie</option>
-              <option [ngValue]="s" *ngFor="let s of subseries">{{s.denominacion | capitalizar}}</option>
+              <option [ngValue]="s" *ngFor="let s of subseries">{{s.subserie_id}} {{s.denominacion | capitalizar}}</option>
             </select>
           </div>
           <div class="sk-spinner sk-spinner-cube-grid" [ngClass]="{'hide': !cargando}">
@@ -181,7 +181,7 @@
                 <th>Retención Central</th>
                 <th>Soporte Electrónico</th>
                 <th>Soporte Físico</th>
-                <th>Procedimiento</th>
+                <th class="hide">Procedimiento</th>
                 <th>Activo</th>
               </tr>
             </thead>
@@ -194,7 +194,7 @@
                 <td>{{item.retencion_central}}</td>
                 <td>{{(item.soporte_electronico===0)?'NO':'SI'}}</td>
                 <td>{{(item.soporte_fisico===0)?'NO':'SI'}}</td>
-                <td>{{item.procedimiento}}</td>
+                <td class="hide">{{item.procedimiento}}</td>
                 <td>{{(item.activo===0)?'NO':'SI'}}</td>
               </tr>
             </tbody>
