--- a/src/app/modulos/principal/componentes/escritorio/escritorio.component.html
+++ b/src/app/modulos/principal/componentes/escritorio/escritorio.component.html
@@ -60,6 +60,9 @@
             <li routerLinkActive="active">
               <a routerLink="archivos/resumen">Resumen</a>
             </li>
+            <li routerLinkActive="active">
+              <a routerLink="tablaretencion">Tabla de Retención</a>
+            </li>
           </ul>
         </li>
         <li routerLinkActive="active">
@@ -267,11 +270,11 @@
       <!-- <div class="full-height"> -->
       <div class="full-height-scroll white-bg">
 
-        <!-- <div class="wrapper wrapper-content animated fadeInRightBig"> -->
+        <div class="wrapper wrapper-content animated fadeInRightBig">
         <!-- <div class="middle-box text-center animated fadeInRightBig"> -->
         <router-outlet (activate)="component_added($event)" (deactivate)="component_removed($event)"></router-outlet>
         <!-- </div> -->
-        <!-- </div> -->
+        </div>
 
 
       </div>
